--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -O0 -g -o a kola.cpp httplib.c base64.c -ljansson -D_DEBUG
+	g++ -O0 -g -o a kola.cpp httplib.c base64.c -ljansson -D_DEBUG -lpcre
