--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -O0 -g -o a pcre.cpp kola.cpp filter.cpp httplib.c base64.c -ljansson -D_DEBUG -lpcre -lssl -lcrypto
+	g++ -O0 -g -o a pcre.cpp kola.cpp album.cpp filter.cpp httplib.c base64.c -ljansson -D_DEBUG -lpcre -lssl -lcrypto -pthread
