两个服务合为一个服务.增加压缩传输支持.

--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -2,4 +2,4 @@ all:
 	g++ -O0 -g -o a \
 		httplib.c base64.cpp \
 		pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
-		-ljansson -D_DEBUG -lpcre -lssl -lcrypto -pthread
+		-ljansson -D_DEBUG -lpcre -lssl -lcrypto -pthread -lz
