--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -1,5 +1,5 @@
 all:
 	g++ -O0 -g -o a \
 		httplib.cpp base64.cpp threadpool.cpp \
-		pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
+		video.cpp pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
 		-ljansson -D_DEBUG -lpcre -lssl -lcrypto -pthread -lz
