--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -2,4 +2,4 @@ all:
 	g++ -O0 -g -o a \
 		httplib.cpp base64.cpp threadpool.cpp \
 		video.cpp task.cpp pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
-		-ljansson -D_DEBUG -lpcre -lssl -lcrypto -pthread -lz
+		-ljansson -D_DEBUG -lpcre -lcrypto -pthread -lz
