--- a/sdk/Makefile
+++ b/sdk/Makefile
@@ -1,5 +1,5 @@
 all:
 	g++ -O0 -g -o a \
 		httplib.cpp base64.cpp threadpool.cpp \
-		video.cpp task.cpp pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
+		menu.cpp stringlist.cpp video.cpp task.cpp pcre.cpp kola.cpp album.cpp filter.cpp main.cpp \
 		-ljansson -D_DEBUG -lpcre -lcrypto -pthread -lz
