add lua-curl, update wolidou.lua

--- a/sdk/lua/Makefile
+++ b/sdk/lua/Makefile
@@ -30,6 +30,9 @@ SRC += src/ltable.c
 SRC += src/lvm.c
 
 SRC += lua-cjson-xml/lua_cjson.c lua-cjson-xml/strbuf.c lua-cjson-xml/fpconv.c lua-cjson-xml/lua_xml.c
+SRC += lua-curl/src/Lua-cURL-callback.c  lua-curl/src/Lua-cURL-multi.c  lua-curl/src/Lua-cURL-setopt.c  lua-curl/src/Lua-cURL.c \
+	   lua-curl/src/Lua-cURL-getinfo.c   lua-curl/src/Lua-cURL-post.c   lua-curl/src/Lua-cURL-share.c   lua-curl/src/Lua-utility.c
+
 LIB=liblua.a
 
 
