--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -29,7 +29,7 @@ ADD_GX_LIBRARY(kolatv
 	json.cpp
 )
 
-ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -Wno-deprecated-declarations)
+ADD_DEFINITIONS(-DTEST=0 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -Wno-deprecated-declarations)
 
 ###############################################################################
 # 编译可执行程序
