--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -36,6 +36,6 @@ ADD_DEFINITIONS(-DTEST=0 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -Wno-depre
 # test
 SET(CMAKE_EXE_LINKER_FLAGS "--static")
 ADD_EXECUTABLE(kola main.cpp)
-TARGET_LINK_LIBRARIES(kola kolatv jansson pcre crypto z ${GXCORE_LIB} dl pthread curl)
+TARGET_LINK_LIBRARIES(kola kolatv jansson pcre crypto z ${GXCORE_LIB} dl pthread curl z)
 
 INSTALL(FILES kola.hpp DESTINATION ${GOXCEED_PATH}/include)
