--- a/sdk/lua/Makefile
+++ b/sdk/lua/Makefile
@@ -18,7 +18,7 @@ SRC += src/lparser.c
 SRC += src/lstrlib.c
 SRC += src/ltm.c
 SRC += src/lundump.c
-SRC += src/print.c
+#SRC += src/print.c
 SRC += src/lbaselib.c
 SRC += src/ldebug.c
 SRC += src/lfunc.c
@@ -28,6 +28,9 @@ SRC += src/lopcodes.c
 SRC += src/lstate.c
 SRC += src/ltable.c
 SRC += src/lvm.c
+SRC += src/lbitlib.c
+SRC += src/lcorolib.c
+SRC += src/lctype.c
 
 SRC += lua-cjson-xml/lua_cjson.c lua-cjson-xml/strbuf.c lua-cjson-xml/fpconv.c lua-cjson-xml/lua_xml.c
 SRC += lua-curl/src/Lua-cURL-callback.c  lua-curl/src/Lua-cURL-multi.c  lua-curl/src/Lua-cURL-setopt.c  lua-curl/src/Lua-cURL.c \
