--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -6,9 +6,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 INCLUDE_DIRECTORIES(.)
 INCLUDE_DIRECTORIES(lua/src)
 
-AUX_SOURCE_DIRECTORY(./lua/src/           SRCS)
-AUX_SOURCE_DIRECTORY(./lua/lua-cjson-xml/ SRCS)
-#AUX_SOURCE_DIRECTORY(./lua/lua-curl/src/  SRCS)
+AUX_SOURCE_DIRECTORY(lua/src/           SRCS)
+AUX_SOURCE_DIRECTORY(lua/lua-cjson-xml/ SRCS)
+AUX_SOURCE_DIRECTORY(lua/lua-pcre/      SRCS)
+#AUX_SOURCE_DIRECTORY(lua/lua-curl/src/  SRCS)
 
 ADD_GX_LIBRARY(kolatv
 	${SRCS}
