--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ INCLUDE_DIRECTORIES(lua/src)
 AUX_SOURCE_DIRECTORY(lua/src/           SRCS)
 AUX_SOURCE_DIRECTORY(lua/lua-cjson-xml/ SRCS)
 AUX_SOURCE_DIRECTORY(lua/lua-pcre/      SRCS)
-#AUX_SOURCE_DIRECTORY(lua/lua-curl/src/  SRCS)
+AUX_SOURCE_DIRECTORY(lua/lua-curl/src/  SRCS)
 
 ADD_GX_LIBRARY(kolatv
 	${SRCS}
