fix compile error.

--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -48,4 +48,4 @@ SET(CMAKE_EXE_LINKER_FLAGS "--static")
 ADD_EXECUTABLE(kola main.cpp)
 TARGET_LINK_LIBRARIES(kola kolatv jansson pcre crypto z ${GXCORE_LIB} dl pthread curl z)
 
-INSTALL(FILES kola.hpp DESTINATION ${GOXCEED_PATH}/include)
+INSTALL(FILES kola.hpp http.hpp DESTINATION ${GOXCEED_PATH}/include)
